# mik32-tamagotchi

./: Makefile
app/: CMakeLists.txt  assets.h  lcd_driver.c  lcd_driver.h  main.c  main.cpp
app/tamagotchi/include/: control_button.h  elements.h  interface.h  logical_button.h  sensor.h  tamagotchi.h
app/ui/include/: abstract_drawable.h  container.h  drawable.h  image.h  indicator_bar.h  progress_bar.h  screen.h  tabs.h
app/utils/include/: bitarray.h  canvas.h  filter.h  intrusive-list.h  screen.h
cmake/: toolchain_config.cmake
hardware/: CMakeLists.txt
hardware/mik32-dht11/include/: dht11.h
hardware/mik32-dht11/source/: dht11.cpp
hardware/mik32-runtime/ldscripts/: eeprom.ld  ram.ld  sections.lds  spifi.ld
hardware/mik32-runtime/runtime/: crt0.S  start.c
hardware/mik32-ssd1315/include/: ssd1315.h
hardware/mik32-ssd1315/source/: ssd1315.cpp
